--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,9 @@
     text-align: center;
     color: #FFFFFF;
 }
+.mobile-menu {
+    display: none;
+}
 .background-image {
     background-image: url('../img/main-screen__bgc.png');
     background-position: center;
@@ -253,7 +256,6 @@
     position: absolute;
     left: 10px;
     bottom: -15px;
-    /*border-bottom: 8px solid #C89AFC;*/
     width: 265px;
     height: 8px;
     background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
@@ -316,6 +318,8 @@
     height: 420px;
     background: none;
     border: 20px solid #C89AFC;
+    margin: 0 10px;
+    box-sizing: border-box;
 }
 .image-section img {
     display: block;
@@ -528,6 +532,74 @@
     text-align: center;
     color: #FFFFFF;
     opacity: 0.8;
+}
+.brands-section {
+    padding: 50px 0;
+    background: #121212;
+}
+.brands-title {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.brands-title img {
+    display: block;
+    width: 100%;
+    max-width: 127px;
+    margin-right: 20px;
+}
+.brands-title h2 {
+    margin: 0;
+    padding: 0 10px;
+    box-sizing: border-box;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 140%;
+    color: #FFFFFF;
+}
+.brands-icon {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+.brands-icin-links {
+    width: 25%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.brands-icin-links:nth-child(1) {
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+.brands-icin-links:nth-child(2) {
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+.brands-icin-links:nth-child(3) {
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+}
+.brands-icin-links:nth-child(4) {
+    border-bottom: 1px solid #fff;
+}
+.brands-icin-links:nth-child(5) {
+    border-right: 1px solid #fff;
+}
+.brands-icin-links:nth-child(6) {
+    border-right: 1px solid #fff;
+}
+.brands-icin-links:nth-child(7) {
+    border-right: 1px solid #fff;
+}
+.brands-icin-links a img {
+    display: block;
+    width: 100%;
+    max-width: 198px;
+    margin: 0 auto;
 }
 .education-section {
     background: #121212;
@@ -773,4 +845,294 @@
 .article-section {
     padding: 50px 0;
     background: #121212;
+}
+.article-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.article-content h2 {
+    margin: 0;
+    padding: 0 120px;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 140%;
+    color: #FFFFFF;
+}
+.article-content p {
+    margin: 0;
+    padding: 0 10px;
+    box-sizing: border-box;
+    text-align: center;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 60px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 160%;
+    color: #FFFFFF;
+    opacity: 0.5;
+}
+.submit-wrapper {
+    display: block;
+    width: 500px;
+    position: relative;
+    margin-bottom: 40px;
+}
+.submit-wrapper input {
+    width: 100%;
+    height: 45px;
+    font-family: Roboto;
+    padding: 0 10px;
+    box-sizing: border-box;
+    border: none;
+    background: #FFFFFF;
+    opacity: 0.25;
+    border-radius: 50px 0px 0px 50px;
+    color: #FFFFFF;
+}
+.submit-wrapper button {
+    position: absolute;
+    top: 0;
+    right: -25px;
+    width: 150px;
+    height: 45px;
+    border: none;
+    background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+    border-radius: 50px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 150%;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+.image-links {
+    display: flex;
+    flex-direction: row;
+    width: 400px;
+    margin: 0 auto;
+    justify-content: space-around;
+}
+.image-links a {
+    position: relative;
+    display: block;
+}
+.image-links img {
+    display: block;
+    width: 100%;
+    max-width: 25px;
+    position: relative;
+    z-index: 2;
+}
+.image-links a::after {
+    content: "";
+    position: absolute;
+    left: -13px;
+    top: -11px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 50%;
+    background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+}
+.footer-wrapper {
+    background: #121212;
+    padding: 30px 0;
+}
+.footer-wrapper a {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: fit-content;
+    text-decoration: none;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 160%;
+    color: #FFFFFF;
+    opacity: 0.8;
+}
+.footer-wrapper a:hover {
+    color: rgb(126, 126, 189);
+}
+
+
+
+@media screen and (max-width: 1165px) {
+    .procent-box:nth-child(1) > span::before {
+        width: 240px;
+    }
+    .procent-box:nth-child(2) > span::before {
+        width: 240px;
+        left: -35px;
+    }
+.procent-box:nth-child(3) > span::before {
+        width: 240px;
+        left: -70px;
+    }
+.procent-box:nth-child(4) > span::before {
+        width: 240px;
+        left: -105px;
+    }
+}
+
+@media screen and (max-width: 1090px) {
+    .background {
+        position: relative;
+        padding-top: 80%;
+    }
+    .order-container {
+        flex-direction: column-reverse;
+    }
+    .box-earnings {
+        margin-bottom: 20px;
+    }
+    .quantity-box {
+        margin-bottom: 20px;
+    }
+}
+@media screen and (max-width: 1040px) {
+    .header-links ul li {
+        margin-left: 10px;
+    }
+}
+@media screen and (max-width: 970px) {
+    .procent-box:nth-child(1) > span::before {
+        width: 180px;
+    }
+    .procent-box:nth-child(2) > span::before {
+        width: 190px;
+        left: -58px;
+    }
+.procent-box:nth-child(3) > span::before {
+        width: 200px;
+        left: -107px;
+    }
+.procent-box:nth-child(4) > span::before {
+        width: 210px;
+        left: -145px;
+    }
+}
+@media screen and (max-width: 955px) {
+    .container-content {
+        flex-direction: column-reverse;
+    }
+    .text-section {
+        width: 100%;
+        padding-left: 0;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .image-section {
+        width: 100%;
+        padding-right: 0;
+    }
+}
+@media screen and (max-width: 900px) {
+    .header-button {
+        display: none;
+    }
+    .header-wrapper {
+        justify-content: space-between;
+    }
+}
+@media screen and (max-width: 767px) {
+    .mobile-menu {
+        display: block;
+    }
+    .header-links {
+        display: none;
+    }
+     .background {
+        position: relative;
+        padding-top: 100%;
+    }
+    .hero-wrapper h2 {
+        width: 100%;
+        max-width: 100%;
+        font-size: 35px;
+        line-height: 40px;
+    }
+    .block {
+        width: 50px;
+        height: 55px;
+    }
+    .block span {
+        font-size: 20px;
+        line-height: 25px;
+    }
+    .block p {
+        font-size: 10px;
+        line-height: 13px;
+    }
+    .procent-box:nth-child(1) > span::before {
+        width: 110px;
+    }
+    .procent-box:nth-child(2) > span::before {
+        width: 190px;
+        left: -78px;
+    }
+    .procent-box:nth-child(3) > span::before {
+        width: 200px;
+        left: -75px;
+    }
+    .procent-box:nth-child(4) > span::before {
+        width: 144px;
+        left: -63px;
+    }
+    .profession-content {
+        flex-direction: column;
+    }
+    .prosession-box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .teacher-content {
+        flex-direction: column;
+    }
+    .teacher-box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .submit-wrapper {
+        width: 100px;
+    }
+    .submit-wrapper button {
+        right: -98px;
+        width: 115px;
+    }
+}
+
+
+
+
+
+
+@media screen and (max-width: 700px) {
+    .procent-box:nth-child(1) > span::before {
+        width: 110px;
+    }
+    .procent-box:nth-child(2) > span::before {
+        width: 122px;
+        left: -61px;
+    }
+    .procent-box:nth-child(3) > span::before {
+        width: 130px;
+        left: -110px;
+    }
+    .procent-box:nth-child(4) > span::before {
+        width: 187px;
+        left: -150px;
+    }
 }
